--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ font-size: 8pt
 #page-container { 
     width: 760px; 
     margin: auto; 
-    background: red;
+    background:red;
 }
 
+#header {
+background: blue;
+height: 150px;
+}
+#content {
+background: green;
+}
+#footer {
+background: orange;
+height: 66px;
+}
